SERVER-19693 Deadlock when JS calls ProxyScope

When the call chain goes ProxyScope -> ImplScope -> ProxyScope (as when
a javascript callback calls back into the proxy scope), we deadlock.
Let's check if we're on the implementation thread when we're called and
just invoke directly in that case.